package SGG.Proxy.CglibProxy;

public class TeacherDao {
    public void teach(){
        System.out.println("老师授课中……");
    }
}
