@startuml
'https://plantuml.com/class-diagram

Client --> ProxyFactory
Client --> TeacherDao

class TeacherDao{
    + void teach()
}

interface MethodInterceptor{
    + Object intercept()
}
note top of MethodInterceptor
这个接口由cglib包提供，代理类需要实现这个接口
end note
MethodInterceptor <|-- ProxyFactory

class ProxyFactory{
    - Object target
    + ProxyFactory()
    + Object getProxyInstance()
    + Object intercept()
}

@enduml